--- a/Prototipos/Prototipo3/Prototipo3.ipynb
+++ b/Prototipos/Prototipo3/Prototipo3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +275,47 @@
     "cant_basesdedatos = 2\n",
     "\n",
     "BaseDeDatos=CalcularYCargarParametrosAcusticosAldf(path_carpeta,nombre,cant_audios,extension,cant_basesdedatos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PitchShifter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchaudio\n",
+    "import soundfile as sf\n",
+    "\n",
+    "def PitchShifter(input_file_path,output_file_path,semi_tonos):\n",
+    "    audio,sr = sf.read(input_file_path)\n",
+    "    audio = torch.tensor(audio)\n",
+    "    y= torchaudio.functional.pitch_shift(\n",
+    "        waveform = audio,\n",
+    "        sample_rate = sr,\n",
+    "        n_steps=semi_tonos)\n",
+    "    sf.write(output_file_path, y,samplerate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file_main_path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/Crudo/'\n",
+    "input_file_main_path_name = ['E_crudo',]\n",
+    "output_file_path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/Gohan.wav'\n",
+    "semi_tonos = 8\n",
+    "def PitchearTodosLosAudios(input_file_path,output_file_path,semi_tonos):\n",
+    "    PitchShifter(input_file_path,output_file_path,semi_tonos)"
    ]
   },
   {
