--- a/Prototipos/Prototipo3/ExperimentoVocesPitcheadas.ipynb
+++ b/Prototipos/Prototipo3/ExperimentoVocesPitcheadas.ipynb
@@ -727,6 +727,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RecortarTodasLasPalabras Pitcheada"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
